Add heder and picture

--- a/index.html
+++ b/index.html
@@ -10,11 +10,32 @@
 </head>
 <body>
   <header>
-    <span></span>
-    <nav><ul>li>a</ul></nav>
-    <button></button>    
+    <span class="lable">
+      Flex Cafe
+    </span>
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#" class="link">HOME</a>
+        </li class="nav-item">
+        <li>
+          <a href="#" class="link">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="link">SERVICES</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="link">MENU</a>
+        </li>
+      </ul>
+    </nav>
+    <button class="button">CONTACT</button>    
   </header>
-  <main></main>
+  <main>
+    <div class="backg">
+
+    </div>
   
+  </main>  
 </body>
 </html>
