--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <header>
-    <span class="lable">
+    <h1 class="lable">
       Flex Cafe
-    </span>
+    </h1>      
     <nav>
       <ul class="nav-list">
         <li class="nav-item">
@@ -31,11 +31,6 @@
     </nav>
     <button class="button">CONTACT</button>    
   </header>
-  <main>
-    <div class="backg">
-
-    </div>
-  
-  </main>  
+  <main></main>  
 </body>
 </html>
